# Structure-PLP-SLAM-ROS2

./: .gitignore  CMakeLists.txt  README.md  test.sh
docs/: compile.md  eval_euroc.md  example.md  pipeline.md  problem.md
example/: MAP_AND_LOCALIZATION.md
example/tum_rgbd/: TUM_RGBD_mono_2.yaml
ros2/: CMakeLists.txt  package.xml
ros2/include/: utility.hpp
ros2/launch/: tum_rgbd_mono.py
ros2/log/: latest_build
ros2/src/mono/: mono-slam-node.cpp  mono-slam-node.hpp  mono.cpp
ros2/src/publisher/: tum_publisher.cpp
ros2/src/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp  rgbd.cpp
ros2/src/stereo/: stereo-slam-node.cpp  stereo-slam-node.hpp  stereo.cpp
scripts/: eval_euroc.sh  publish_tum_rgbd.py
src/PLPSLAM/: CMakeLists.txt
src/PLPSLAM/data/: keyframe.cc
src/PLPSLAM/io/: trajectory_io.cc
src/PLPSLAM/module/: two_view_triangulator_line.cc
src/PLPSLAM/publish/: frame_publisher.h  map_publisher.cc
src/pangolin_viewer/: CMakeLists.txt  color_scheme.cc  viewer.cc  viewer.h
