<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plpslam_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for Structure PLP-SLAM (Point, Line, Plane SLAM)</description>
  <maintainer email="fangwen.shu@dfki.de">Fangwen Shu</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>Pangolin</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
